# Pose_esti_real

./: README.md
detection_network/: CMakeLists.txt
detection_network/src/: junk.cpp  yolov2_detect.cpp  yolov2_detect.hpp
flyer/: CMakeLists.txt  CMakeLists1.txt  package.xml
flyer/include/flyer/: flyer.h
flyer/src/: flyer_node.cpp
flyer/src/libraries/: flyer.cpp
opti/: CMakeLists.txt  package.xml
opti/include/opti/: get.h
opti/launch/: pelican_ctrl.launch
opti/src/: get_node.cpp
opti/src/libraries/: get.cpp
tgt_pstion/: CMakeLists.txt  package.xml
tgt_pstion/include/tgt_pstion/: target_position_estimation.h
tgt_pstion/src/nodes/: tgt_pstion_single.cpp
tum_ardrone_drone/flightPlans/: initDemo.txt  move.txt  move1.txt  square1x1.txt  square3x3.txt
tum_ardrone_drone/launch/: ardrone_driver.launch
tum_ardrone_drone/src/UINode/: tum_ardrone_gui.ui
tum_ardrone_drone/src/stateestimation/: MapView.cpp
vrpn_client_ros_drone/launch/: sample.launch
